[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "nba_api"
version = "1.7"
description = "An API Client package to access the APIs for NBA.com"
license = "MIT"
authors = [ 
     {email="Swar Patel <swar.m.patel@gmail.com>"}
]
maintainers = [
    {email="Swar Patel <swar.m.patel@gmail.com>"},
    {email="Randy Forbes <randy.forbes@gmail.com>"}
]
readme = "README.md"
repository = "https://github.com/swar/nba_api"
documentation = "https://github.com/swar/nba_api/blob/master/README.md"
keywords = ["api", "basketball", "data", "nba", "sports", "stats"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development"
]
requires-python = ">=3.9"
"Bug Tracker" = "https://github.com/swar/nba_api/issues"
dependencies = [
    "requests (>=2.32.3)",
    "numpy (>1.22.2)"]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^4.0"
flake8 = "^7.1.1"
pandas = "^2.2.3"

[tool.pytest.ini_options]
testpaths = "./tests/unit/"